ansible/playbooks/cluster/k8s-dashboard/roles/k8s-dashboard/templates/k8s-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  type: ClusterIP
